# scmtiles

./: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  bootstrap_scmtiles.py  bootstrap_scmtiles.sh  conda-requirements.txt  pyproject.toml  setup.cfg  setup.py
scmtiles/: __init__.py  _version.py  cli.py  config.py  exceptions.py  grid_manager.py  runner.py  task.py  util.py
scmtiles/test/: __init__.py  test_coding_standards.py
scmtiles/test/data/: grid.201601.nc
scmtiles/test/integration/: __init__.py  test_simple.py
scmtiles/test/unit/: __init__.py
scmtiles/test/unit/cli/: __init__.py  test_get_arg_handler.py
scmtiles/test/unit/config/: __init__.py  test_SCMTilesConfig.py
scmtiles/test/unit/grid_manager/: __init__.py  test_Cell.py  test_GridManager.py  test_LinearTile.py  test_RectangularTile.py
scmtiles/test/unit/runner/: __init__.py  test_TileRunner.py
scmtiles/test/unit/util/: __init__.py  test_get_logger.py
